# turbines_EDA

./: POE_Task.xlsx  README.md  ignitis_notebook.html  ignitis_notebook.py  pyproject.toml
