[project]
name = "ignitis"
version = "0.1.0"
description = "library fit for ignitis tasks"
authors = [
    {name = "MLovei",email = "martynas.love@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo (>=0.16.5,<0.17.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "plotly (>=6.3.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
